# structure

./: AGENTS.md  CLAUDE.md  Cargo.toml  LEARNING.md  README.md  TODO.md  flutter_rust_bridge.yaml  run_linux.sh  skills-lock.json
.claude/agents/: flutter-mentor.md  rust-mentor.md  software-architect.md
.opencode/agent/: cross-platform-architect.md  dev-orchestrator.md  flutter-mentor.md  rust-mentor.md
.opencode/agents/: architect.md  (+7 more)
application_core/: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: api.rs  domain.rs  errors.rs  lib.rs  persistence.rs
backend/src/api/: exercises.rs  mesocycles.rs  microcycles.rs  sets.rs  workouts.rs
backend/src/domain/: planning.rs
backend/src/dto/: planning.rs
backend/src/persistence/: exercises.rs  mesocycles.rs  microcycles.rs  sets.rs  sqlite.rs  workouts.rs
frontend/: .gitignore  README.md  pubspec.yaml  structure.db
mesocycle_builder/: Cargo.toml
scripts/: run_linux.sh
structure-core/: Cargo.toml
structure-ffi/: Cargo.toml
structure-ffi/src/: api.rs
structure-ffi/src/api/: exercises.rs  mesocycles.rs  microcycles.rs  sets.rs  workouts.rs
structure-ffi/src/dto/: planning.rs
structure-server/: Cargo.toml
structure-server/src/: dto.rs  error.rs  lib.rs  library_exercises.rs  main.rs  mesocycles.rs  microcycles.rs  planned_exercises.rs  set_groups.rs  sets.rs  workouts.rs
structure-server/tests/: health.rs  library_exercises.rs  mesocycles.rs  microcycles.rs  planned_exercises.rs  set_groups.rs  sets.rs  workouts.rs
structure-server/tests/common/: mod.rs
workout_tracker/: Cargo.toml
(+53 files in other folders)
