[package]
name = "structure-server"
version = "0.1.0"
edition = "2024"

[dependencies]
structure-core = { path = "../structure-core" }
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
